# unicap

./: CMakeLists.txt  INSTALL.txt  Unicap.thrift  index.html  job_tracker.cpp  task_tracker.cpp  user_cpu_functions.h
app/: CMakeLists.txt  job_tracker.cpp  user_cpu_functions.h
common/: column_family.cpp  column_family.h  intermediate_result.h  node_info.cpp  node_info.h  storage.cpp  storage.h  storage_info.cpp  storage_info.h  table.cpp  table.h  unicap_client.h
computing/: CMakeLists.txt  cpu_functions.cpp  cpu_functions.h
etc/: unicap.yaml
job_tracker/: CMakeLists.txt  DAG.cpp  DAG.h  job_tracker_function.cpp  job_tracker_function.h  job_tracker_handler.cpp  job_tracker_handler.h  job_tracker_main.cpp  job_tracker_server.cpp  job_tracker_server.h  main  scheduler.h  stage.cpp  stage.h
job_tracker/testdb/: LOG
src/common/: intermediate_result.h  node_info.cpp  storage.cpp  storage.h
src/computing/: cpu_functions.cpp  cpu_functions.h
src/job_tracker/: DAG.cpp  DAG.h  job_tracker_handler.h  load_hdfs_file.cpp  load_img.cpp  load_local_file.cpp
src/storage/: dense_matrix.cpp  dense_matrix.h  hdfs_key_value.cpp  hdfs_key_value.h  image_key_value.cpp  image_key_value.h  in_memory_key_value.cpp  in_memory_key_value.h  kv_base.h  lsm_key_value.cpp  lsm_key_value.h  sparse_matrix.cpp  sparse_matrix.h  storage_systems.h
src/task_tracker/: CMakeLists.txt  task_tracker.cpp  task_tracker_handler.cpp  task_tracker_handler.h
src/thrift/: Unicap.thrift
src/thrift/gen-cpp/: TaskTracker.h  TaskTracker_server.skeleton.cpp  Unicap_types.cpp  Unicap_types.h
storage/: common_key_value.h  hdfs_key_value.cpp  hdfs_key_value.h  in_memory_key_value.cpp  in_memory_key_value.h  kv_base.h  lsm_key_value.cpp  lsm_key_value.h  storage_systems.h
task_tracker/: CMakeLists.txt  cpu_networks.h  cpu_worker.cpp  cpu_worker.h  main  task_tracker_handler.cpp  task_tracker_handler.h  task_tracker_main.cpp  task_tracker_server.cpp  task_tracker_server.h
task_tracker/lsm_key_value/a/0a/: 000029.ldb  000031.ldb  000034.ldb  LOG  LOG.old  MANIFEST-000033
task_tracker/lsm_key_value/a/1a/: LOG  LOG.old
task_tracker/lsm_key_value/a/2a/: LOG  LOG.old
task_tracker/lsm_key_value/a/3a/: LOG  LOG.old
task_tracker/lsm_key_value/a/4a/: LOG  LOG.old
task_tracker/lsm_key_value/a/5a/: LOG  LOG.old
task_tracker/lsm_key_value/a/6a/: LOG  LOG.old
task_tracker/lsm_key_value/a/7a/: LOG  LOG.old
task_tracker/lsm_key_value/a/8a/: LOG  LOG.old
task_tracker/lsm_key_value/a/9a/: LOG  LOG.old
thrift/: Unicap.thrift
thrift/gen-cpp/: TaskTracker.cpp  TaskTracker.h  TaskTracker_server.skeleton.cpp  Unicap_types.cpp  Unicap_types.h
tools/include/boost/threadpool/: pool.hpp  task_adaptors.hpp
tools/include/opencv/: cv.h
tools/lib/: libhdfs3.1.dylib
